# machine-learning2

./: .gitignore
machine-learning2/: hello.py  pyproject.toml
machine-learning2/notebooks/: arima.ipynb  reviewer.ipynb  timeseries.ipynb
machine-learning2/notebooks/class_imbalances/: HW2-LT5A.ipynb  final_results.json  hw2_program.py  results.json  results1.json  test.ipynb
machine-learning2/notebooks/interpretability/: hw3.ipynb
machine-learning2/notebooks/timeseries/: LT5-QUIZ1_ProblemSolving_MSDSFT2025.ipynb  quiz.ipynb  timeseries.ipynb
machine-learning2/utils/: timeseries_handler.py
wesm-demand/: adaptive_drift_detection.ipynb  data_exploration.ipynb  demand_forecasting.ipynb  hello.py  pyproject.toml
wesm-demand/forecasting/: data_prep.py
