[project]
name = "machine-learning2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imblearn>=0.0",
    "matplotlib>=3.10.0",
    "numba>=0.61.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "scikit-learn==1.5.2",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
    "xgboost>=2.1.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
