[project]
name = "wesm-demand"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keras>=3.9.0",
    "matplotlib>=3.10.1",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.18.0",
    "tkan>=0.4.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
